--- a/package.yaml
+++ b/package.yaml
@@ -1,6 +1,6 @@
-name:                free-recorder
+name:                free-cached
 version:             0.1.0.0
-github:              "ChrisPenner/free-recorder"
+github:              "ChrisPenner/free-cached"
 license:             BSD3
 author:              "Chris Penner"
 maintainer:          "christopher.penner@gmail.com"
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/ChrisPenner/free-recorder#readme>
+description:         Please see the README on GitHub at <https://github.com/ChrisPenner/free-cached#readme>
 
 dependencies:
 - base >= 4.7 && < 5
@@ -33,7 +33,7 @@ library:
     - -Wall
 
 executables:
-  free-recorder-exe:
+  free-cached-exe:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
@@ -41,10 +41,10 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - free-recorder
+    - free-cached
 
 tests:
-  free-recorder-test:
+  free-cached-test:
     main:                Spec.hs
     source-dirs:         test
     ghc-options:
@@ -52,4 +52,4 @@ tests:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - free-recorder
+    - free-cached
